# vine

./: .gitignore  AUTHORS  CMakeLists.txt  COPYRIGHT  LICENSE  README.md
include/: adam_scheduler.h  backprop.h  bitset.h  covariance.h  crispr.h  geometry.h  gradients.h  heap.h  hutchinson.h  likelihoods.h  migration.h  multiDAG.h  multi_mvn.h  mvn.h  nj.h  nuisance.h  planar_flow.h  radial_flow.h  rf.h  sparse_matrix.h  sparse_vector.h  taylor.h  tree_prior.h  upgma.h  var_resampling.h  variational.h
src/: Makefile  make-include.mk
src/lib/: CMakeLists.txt  Makefile  adam_scheduler.c  backprop.c  bitset.c  covariance.c  crispr.c  geometry.c  gradients.c  heap.c  hutchinson.c  likelihoods.c  migration.c  multiDAG.c  multi_mvn.c  mvn.c  nj.c  nuisance.c  planar_flow.c  radial_flow.c  rf.c  sparse_matrix.c  sparse_vector.c  taylor.c  tree_prior.c  upgma.c  var_resampling.c  variational.c
src/progs/: CMakeLists.txt  Makefile  evalTrees.c  evalTrees.help  testTaylor.c  testcrispr.c  testhky.c  testmvn.c  testrf.c  testsparse.c  vine.c  vine.help  vine.help_src
